# aplang-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  sonar-project.properties
.fleet/: settings.json
.github/workflows/: build.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  tokenizer.rs
crates/parser/src/ast/: declarations.rs  expressions.rs  statements.rs
crates/parser/src/parsers/: declarations.rs  expressions.rs  file.rs  mod.rs  number.rs  statements.rs  string.rs
crates/source/: Cargo.toml
crates/source/src/: lib.rs
crates/typing/: Cargo.toml
crates/typing/src/: checker.rs  lib.rs  reg.rs  resolver.rs  ty.rs
src/: main.rs
src/parsing/: control_flow.rs  data.rs  declaration.rs  expression.rs  file.rs  mod.rs  statement.rs  tokenizer.rs  utilities.rs
src/parsing/ast/: declarations.rs  expressions.rs  file.rs  mod.rs  statements.rs
src/parsing/literals/: number.rs  string.rs
src/parsing/parsers/: declarations.rs  expressions.rs  file.rs  mod.rs  number.rs  statements.rs  string.rs
src/project/: files.rs  mod.rs  name_resolver.rs  readers.rs  scopes.rs  std_lib.rs
src/resolution/: fir.rs  mod.rs  name_resolution.rs  name_resolver.rs  type_resolution.rs
src/source/: mod.rs
src/typing/: mod.rs  typedast.rs
src/utils/walkdir/: dent.rs  error.rs  mod.rs  util.rs
tests-files/projects/001/: aplang.toml
tests/test-projects/001/: aplang.toml
tests/test-projects/001/src/: main.aplang
