[package]
name = "aplang"
version = "0.0.1"
authors = ["Amejonah1200 <amejonah@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { version = "1.0.0-alpha.4", features = ["label"] }
num-traits = "0.2"
# num-derive = "0.3"
regex = "1.9"
logos = "0.13"
paste = "1.0"
# clap = "4.1"
anyhow = "1.0"
thiserror = "1.0"
traversal = "0.1"
either = "1.8"
lasso = "0.7"
indextree = "4.6"
slotmap = "1.0.6"
ariadne = "0.3"
itertools = "0.11"
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
same-file = "1.0.1"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.1"
