[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
aplang-parser.workspace = true
aplang-source.workspace = true
aplang-typing.workspace = true
ariadne.workspace = true
chumsky.workspace = true
itertools.workspace = true